--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -77,7 +76,9 @@
   </style>
 </head>
 <body>
-  <div id="image-display"></div>
+  <div id="image-display">
+    <!-- Generated image will appear here -->
+  </div>
   <div id="controls">
     <div id="search-bar">
       <input type="text" id="prompt" placeholder="Type keywords to create an image...">
@@ -93,40 +94,65 @@
     </div>
     <div id="loading" class="loading"></div>
   </div>
-  <script src="generate.js"></script>
   <script>
     let style = 'real';
     let currentImageUrl = '';
+    const REPLICATE_API_TOKEN = 'r8_GSCah1ZV6LeGKlTFoB771H9Rn15mLOQ0sPONu';function setStyle(selectedStyle) {
+  style = selectedStyle;
+}
 
-    function setStyle(selectedStyle) {
-      style = selectedStyle;
-    }
+async function generateImage() {
+  const prompt = document.getElementById('prompt').value;
+  const loadingDiv = document.getElementById('loading');
+  loadingDiv.innerText = 'Generating image...';
 
-    async function generateImage() {
-      const prompt = document.getElementById('prompt').value;
-      const loadingDiv = document.getElementById('loading');
-      loadingDiv.innerText = 'Generating image...';
+  try {
+    const response = await fetch('https://api.replicate.com/v1/predictions', {
+      method: 'POST',
+      headers: {
+        'Authorization': `Token ${REPLICATE_API_TOKEN}`,
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({
+        version: "db21e45e40f8c25cfa0e1c75b1f0b9a35cc645391f3e4e4e96f624a020326c27",
+        input: { prompt: prompt + " in " + style + " style" }
+      })
+    });
 
-      try {
-        const imageUrl = await generateImageFromPrompt(prompt, style);
-        currentImageUrl = imageUrl;
-        document.getElementById('image-display').innerHTML = `<img id="generated-img" src="${imageUrl}" alt="Generated Image" />`;
-        loadingDiv.innerText = '';
-      } catch (error) {
-        loadingDiv.innerText = 'Failed to generate image.';
-        console.error(error);
+    const prediction = await response.json();
+    if (prediction.urls && prediction.urls.get) {
+      let result = null;
+      while (!result || result.status !== 'succeeded') {
+        const res = await fetch(prediction.urls.get, {
+          headers: { 'Authorization': `Token ${REPLICATE_API_TOKEN}` }
+        });
+        result = await res.json();
+        if (result.status === 'succeeded') break;
+        await new Promise(resolve => setTimeout(resolve, 1000));
       }
-    }
 
-    function downloadImage() {
-      if (!currentImageUrl) return alert('Please generate an image first.');
-      const link = document.createElement('a');
-      link.href = currentImageUrl;
-      link.download = 'generated-image.png';
-      document.body.appendChild(link);
-      link.click();
-      document.body.removeChild(link);
+      currentImageUrl = result.output[0];
+      document.getElementById('image-display').innerHTML = `<img id="generated-img" src="${currentImageUrl}" alt="Generated Image" />`;
+      loadingDiv.innerText = '';
+    } else {
+      loadingDiv.innerText = 'Failed to generate image';
     }
+  } catch (err) {
+    loadingDiv.innerText = 'Failed to generate image';
+    console.error(err);
+  }
+}
+
+function downloadImage() {
+  if (!currentImageUrl) return alert('Please generate an image first.');
+  const link = document.createElement('a');
+  link.href = currentImageUrl;
+  link.download = 'generated-image.png';
+  document.body.appendChild(link);
+  link.click();
+  document.body.removeChild(link);
+}
+
   </script>
 </body>
 </html>
