--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,21 +23,25 @@
       flex-grow: 1;
       padding: 20px;
     }
+
     #image-display img {
       max-width: 90%;
       max-height: 80%;
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
     }
+
     #controls {
       display: flex;
       flex-direction: column;
       padding: 20px;
       background-color: #0b2624;
     }
+
     #search-bar {
       display: flex;
     }
+
     input[type="text"] {
       flex: 1;
       padding: 10px;
@@ -44,6 +49,7 @@
       border: none;
       border-radius: 5px 0 0 5px;
     }
+
     button {
       padding: 10px 15px;
       font-size: 16px;
@@ -53,21 +59,25 @@
       cursor: pointer;
       border-radius: 0 5px 5px 0;
     }
+
     .style-options {
       margin-top: 10px;
       display: flex;
       justify-content: center;
       gap: 10px;
     }
+
     .style-options button {
       background-color: #1f6560;
       border-radius: 5px;
     }
+
     .loading {
       font-size: 18px;
       color: #a0eec0;
       text-align: center;
     }
+
     #download-btn {
       margin-top: 15px;
       background-color: #00796b;
@@ -94,65 +104,53 @@
     </div>
     <div id="loading" class="loading"></div>
   </div>
+
   <script>
     let style = 'real';
     let currentImageUrl = '';
-    const REPLICATE_API_TOKEN = 'r8_XMpb8ySsSU6ipoIz3kF27f7HRFsLsGJ3WWv0t';function setStyle(selectedStyle) {
-  style = selectedStyle;
-}
 
-async function generateImage() {
-  const prompt = document.getElementById('prompt').value;
-  const loadingDiv = document.getElementById('loading');
-  loadingDiv.innerText = 'Generating image...';
+    function setStyle(selectedStyle) {
+      style = selectedStyle;
+    }
 
-  try {
-    const response = await fetch('https://api.replicate.com/v1/predictions', {
-      method: 'POST',
-      headers: {
-        'Authorization': `Token ${REPLICATE_API_TOKEN}`,
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({
-        version: "db21e45e40f8c25cfa0e1c75b1f0b9a35cc645391f3e4e4e96f624a020326c27",
-        input: { prompt: prompt + " in " + style + " style" }
-      })
-    });
+    async function generateImage() {
+      const prompt = document.getElementById('prompt').value;
+      const loadingDiv = document.getElementById('loading');
+      loadingDiv.innerText = 'Generating image...';
 
-    const prediction = await response.json();
-    if (prediction.urls && prediction.urls.get) {
-      let result = null;
-      while (!result || result.status !== 'succeeded') {
-        const res = await fetch(prediction.urls.get, {
-          headers: { 'Authorization': `Token ${REPLICATE_API_TOKEN}` }
+      try {
+        const response = await fetch('/api/generate', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ prompt, style })
         });
-        result = await res.json();
-        if (result.status === 'succeeded') break;
-        await new Promise(resolve => setTimeout(resolve, 1000));
+
+        const data = await response.json();
+
+        if (data.image) {
+          currentImageUrl = data.image;
+          document.getElementById('image-display').innerHTML = `<img src="${data.image}" alt="Generated Image" />`;
+        } else {
+          alert("Failed to generate image");
+        }
+      } catch (error) {
+        alert("Something went wrong. Try again.");
       }
 
-      currentImageUrl = result.output[0];
-      document.getElementById('image-display').innerHTML = `<img id="generated-img" src="${currentImageUrl}" alt="Generated Image" />`;
       loadingDiv.innerText = '';
-    } else {
-      loadingDiv.innerText = 'Failed to generate image';
     }
-  } catch (err) {
-    loadingDiv.innerText = 'Failed to generate image';
-    console.error(err);
-  }
-}
 
-function downloadImage() {
-  if (!currentImageUrl) return alert('Please generate an image first.');
-  const link = document.createElement('a');
-  link.href = currentImageUrl;
-  link.download = 'generated-image.png';
-  document.body.appendChild(link);
-  link.click();
-  document.body.removeChild(link);
-}
-
+    function downloadImage() {
+      if (!currentImageUrl) return alert('Please generate an image first.');
+      const link = document.createElement('a');
+      link.href = currentImageUrl;
+      link.download = 'generated-image.png';
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    }
   </script>
 </body>
 </html>
