--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Unlimited AI Image Generator</title>
   <style>
     body {
@@ -23,25 +23,21 @@
       flex-grow: 1;
       padding: 20px;
     }
-
     #image-display img {
       max-width: 90%;
       max-height: 80%;
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
     }
-
     #controls {
       display: flex;
       flex-direction: column;
       padding: 20px;
       background-color: #0b2624;
     }
-
     #search-bar {
       display: flex;
     }
-
     input[type="text"] {
       flex: 1;
       padding: 10px;
@@ -49,7 +45,6 @@
       border: none;
       border-radius: 5px 0 0 5px;
     }
-
     button {
       padding: 10px 15px;
       font-size: 16px;
@@ -59,25 +54,21 @@
       cursor: pointer;
       border-radius: 0 5px 5px 0;
     }
-
     .style-options {
       margin-top: 10px;
       display: flex;
       justify-content: center;
       gap: 10px;
     }
-
     .style-options button {
       background-color: #1f6560;
       border-radius: 5px;
     }
-
     .loading {
       font-size: 18px;
       color: #a0eec0;
       text-align: center;
     }
-
     #download-btn {
       margin-top: 15px;
       background-color: #00796b;
@@ -86,9 +77,7 @@
   </style>
 </head>
 <body>
-  <div id="image-display">
-    <!-- Generated image will appear here -->
-  </div>
+  <div id="image-display"></div>
   <div id="controls">
     <div id="search-bar">
       <input type="text" id="prompt" placeholder="Type keywords to create an image...">
@@ -117,9 +106,8 @@
       const prompt = document.getElementById('prompt').value;
       const loadingDiv = document.getElementById('loading');
       loadingDiv.innerText = 'Generating image...';
-
       try {
-        const response = await fetch('/api/generate', {
+        const response = await fetch('https://ai-image-site-git-main-richie-richs-projects-3f8d27b7.vercel.app/api/generate', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -129,17 +117,15 @@
 
         const data = await response.json();
 
-        if (data.image) {
-          currentImageUrl = data.image;
-          document.getElementById('image-display').innerHTML = `<img src="${data.image}" alt="Generated Image" />`;
-        } else {
-          alert("Failed to generate image");
-        }
-      } catch (error) {
-        alert("Something went wrong. Try again.");
-      }
+        if (!response.ok) throw new Error(data.error || 'Failed to generate image');
 
-      loadingDiv.innerText = '';
+        currentImageUrl = data.imageUrl;
+        document.getElementById('image-display').innerHTML = `<img id="generated-img" src="${currentImageUrl}" alt="Generated Image" />`;
+        loadingDiv.innerText = '';
+      } catch (error) {
+        loadingDiv.innerText = 'Something went wrong.';
+        console.error(error);
+      }
     }
 
     function downloadImage() {
