--- a/index.html
+++ b/index.html
@@ -13,134 +13,85 @@
       font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
-      height: 100vh;
+      min-height: 100vh;
     }
-    #image-display {
+
+    #image-container {
+      flex: 1;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-grow: 1;
       padding: 20px;
     }
-    #image-display img {
+
+    #generatedImage {
       max-width: 90%;
       max-height: 80%;
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
     }
+
     #controls {
-      display: flex;
-      flex-direction: column;
       padding: 20px;
       background-color: #0b2624;
     }
-    #search-bar {
-      display: flex;
-    }
-    input[type="text"] {
-      flex: 1;
+
+    #prompt {
+      width: 100%;
       padding: 10px;
       font-size: 16px;
+      border-radius: 5px;
       border: none;
-      border-radius: 5px 0 0 5px;
+      margin-bottom: 10px;
     }
-    button {
-      padding: 10px 15px;
-      font-size: 16px;
-      border: none;
-      background-color: #2a9d8f;
-      color: white;
-      cursor: pointer;
-      border-radius: 0 5px 5px 0;
-    }
-    .style-options {
-      margin-top: 10px;
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-    }
-    .style-options button {
+
+    .style-btn {
+      padding: 8px 16px;
+      margin: 0 5px 10px 0;
       background-color: #1f6560;
+      color: white;
+      border: none;
       border-radius: 5px;
+      cursor: pointer;
     }
-    .loading {
-      font-size: 18px;
-      color: #a0eec0;
-      text-align: center;
+
+    .style-btn.selected {
+      background-color: #2a9d8f;
     }
-    #download-btn {
-      margin-top: 15px;
+
+    #generateBtn {
+      padding: 10px 20px;
+      font-size: 16px;
       background-color: #00796b;
+      color: white;
+      border: none;
       border-radius: 5px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div id="image-display"></div>
+
+  <div id="image-container">
+    <img id="generatedImage" src="" alt="Generated image will appear here." />
+  </div>
+
   <div id="controls">
-    <div id="search-bar">
-      <input type="text" id="prompt" placeholder="Type keywords to create an image...">
-      <button onclick="generateImage()">Create</button>
+    <input type="text" id="prompt" placeholder="Enter a prompt to generate image..." />
+    <div>
+      <button class="style-btn selected" onclick="selectStyle(this)">Real</button>
+      <button class="style-btn" onclick="selectStyle(this)">Anime</button>
+      <button class="style-btn" onclick="selectStyle(this)">AI</button>
     </div>
-    <div class="style-options">
-      <button onclick="setStyle('real')">Real</button>
-      <button onclick="setStyle('anime')">Anime</button>
-      <button onclick="setStyle('ai')">AI</button>
-    </div>
-    <div class="style-options">
-      <button id="download-btn" onclick="downloadImage()">Download Image</button>
-    </div>
-    <div id="loading" class="loading"></div>
+    <button id="generateBtn">Generate Image</button>
   </div>
 
   <script>
-    let style = 'real';
-    let currentImageUrl = '';
-
-    function setStyle(selectedStyle) {
-      style = selectedStyle;
-    }
-
-    async function generateImage() {
-      const prompt = document.getElementById('prompt').value;
-      const loadingDiv = document.getElementById('loading');
-      loadingDiv.innerText = 'Generating image...';
-
-      try {
-        const response = await fetch("https://ai-image-site-prgdmjb3x-richie-richs-projects-3f8d27b7.vercel.app/api/generate", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ prompt, style })
-        });
-
-        const data = await response.json();
-        if (data.imageUrl) {
-          currentImageUrl = data.imageUrl;
-          document.getElementById('image-display').innerHTML = `<img id="generated-img" src="${data.imageUrl}" alt="Generated Image" />`;
-        } else {
-          throw new Error("No image URL in response");
-        }
-      } catch (err) {
-        loadingDiv.innerText = "Something went wrong.";
-        console.error("Error generating image:", err);
-        return;
-      }
-
-      loadingDiv.innerText = '';
-    }
-
-    function downloadImage() {
-      if (!currentImageUrl) return alert('Please generate an image first.');
-      const link = document.createElement('a');
-      link.href = currentImageUrl;
-      link.download = 'generated-image.png';
-      document.body.appendChild(link);
-      link.click();
-      document.body.removeChild(link);
+    function selectStyle(button) {
+      document.querySelectorAll('.style-btn').forEach(btn => btn.classList.remove('selected'));
+      button.classList.add('selected');
     }
   </script>
+  <script src="generate.js"></script>
 </body>
 </html>
