--- a/index.html
+++ b/index.html
@@ -3,108 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Unlimited AI Image Generator</title>
+  <title>AI Image Generator</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      background-color: #0d2f2b;
+      background-color: #042f2e;
       color: white;
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       display: flex;
       flex-direction: column;
-      height: 100vh;
-    }
-    #image-display {
-      flex: 1;
-      display: flex;
-      justify-content: center;
       align-items: center;
-      padding: 20px;
+      padding: 2rem;
     }
-    #image-display img {
+
+    #generatedImage {
       max-width: 90%;
-      max-height: 80%;
+      max-height: 400px;
+      margin: 1rem 0;
       border-radius: 10px;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
     }
-    #controls {
-      padding: 20px;
-      background-color: #0b2624;
+
+    #prompt {
+      padding: 0.5rem;
+      width: 80%;
+      font-size: 1rem;
     }
-    #search-bar {
-      display: flex;
-      margin-bottom: 10px;
-    }
-    input[type="text"] {
-      flex: 1;
-      padding: 10px;
-      font-size: 16px;
+
+    .style-btn {
+      background-color: #065a60;
+      color: white;
+      padding: 0.5rem 1rem;
+      margin: 0.5rem;
       border: none;
-      border-radius: 5px 0 0 5px;
-    }
-    button {
-      padding: 10px 15px;
-      font-size: 16px;
-      border: none;
+      border-radius: 5px;
       cursor: pointer;
     }
-    #generateBtn {
-      background-color: #2a9d8f;
-      color: white;
-      border-radius: 0 5px 5px 0;
-    }
-    .style-btn {
-      background-color: #1f6560;
-      color: white;
-      margin-right: 10px;
-      border-radius: 5px;
-    }
+
     .style-btn.selected {
-      background-color: #43c2b1;
+      background-color: #0b939b;
     }
-    #download-btn {
-      background-color: #00796b;
-      margin-top: 10px;
+
+    #generateBtn {
+      margin-top: 1rem;
+      padding: 0.6rem 1.2rem;
+      font-size: 1rem;
+      background-color: #04b4ae;
+      color: white;
+      border: none;
       border-radius: 5px;
-    }
-    #loading {
-      margin-top: 10px;
-      font-size: 16px;
-      color: #a0eec0;
-      text-align: center;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div id="image-display">
-    <img id="generatedImage" src="" alt="Generated image will appear here">
+  <h1>AI Image Generator</h1>
+  <img id="generatedImage" src="" alt="Generated Image"/>
+  <input type="text" id="prompt" placeholder="Enter a prompt..." />
+  <div>
+    <button class="style-btn selected">Real</button>
+    <button class="style-btn">Anime</button>
+    <button class="style-btn">AI</button>
   </div>
-
-  <div id="controls">
-    <div id="search-bar">
-      <input type="text" id="prompt" placeholder="Describe your image...">
-      <button id="generateBtn">Create</button>
-    </div>
-
-    <div>
-      <button class="style-btn selected">Real</button>
-      <button class="style-btn">Anime</button>
-      <button class="style-btn">AI</button>
-    </div>
-
-    <button id="download-btn" style="display:none">Download Image</button>
-
-    <div id="loading"></div>
-  </div>
+  <button id="generateBtn">Create</button>
 
   <script>
-    const styleButtons = document.querySelectorAll(".style-btn");
-    const downloadBtn = document.getElementById("download-btn");
-
-    styleButtons.forEach(btn => {
+    const buttons = document.querySelectorAll(".style-btn");
+    buttons.forEach((btn) => {
       btn.addEventListener("click", () => {
-        styleButtons.forEach(b => b.classList.remove("selected"));
+        buttons.forEach((b) => b.classList.remove("selected"));
         btn.classList.add("selected");
       });
     });
@@ -112,65 +77,49 @@
     document.getElementById("generateBtn").addEventListener("click", async () => {
       const prompt = document.getElementById("prompt").value;
       const style = document.querySelector(".style-btn.selected")?.textContent || "Real";
-      const imgEl = document.getElementById("generatedImage");
-      const loadingEl = document.getElementById("loading");
 
+      const imgEl = document.getElementById("generatedImage");
       imgEl.src = "";
       imgEl.alt = "Generating...";
-      loadingEl.textContent = "Generating image...";
-      downloadBtn.style.display = "none";
 
       try {
-        const res = await fetch("/api/generate", {
+        const response = await fetch("https://ai-image-site.vercel.app/api/generate", {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ prompt, style })
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ prompt, style }),
         });
 
-        const prediction = await res.json();
+        const prediction = await response.json();
         const predictionUrl = prediction?.urls?.get;
 
         if (!predictionUrl) {
           alert("Failed to start image generation.");
-          loadingEl.textContent = "";
           return;
         }
 
         let image;
         while (!image) {
-          const poll = await fetch(predictionUrl);
-          const data = await poll.json();
+          const res = await fetch(predictionUrl);
+          const data = await res.json();
 
           if (data.status === "succeeded") {
             image = data.output[data.output.length - 1];
           } else if (data.status === "failed") {
             alert("Image generation failed.");
-            loadingEl.textContent = "";
             return;
           } else {
-            await new Promise(r => setTimeout(r, 1500));
+            await new Promise((resolve) => setTimeout(resolve, 1500));
           }
         }
 
         imgEl.src = image;
         imgEl.alt = "Generated Image";
-        downloadBtn.style.display = "inline-block";
-        loadingEl.textContent = "";
       } catch (err) {
         console.error(err);
         alert("Something went wrong.");
-        loadingEl.textContent = "";
       }
-    });
-
-    downloadBtn.addEventListener("click", () => {
-      const imgEl = document.getElementById("generatedImage");
-      const link = document.createElement("a");
-      link.href = imgEl.src;
-      link.download = "generated-image.png";
-      document.body.appendChild(link);
-      link.click();
-      document.body.removeChild(link);
     });
   </script>
 </body>
