--- a/index.html
+++ b/index.html
@@ -6,121 +6,49 @@
   <title>AI Image Generator</title>
   <style>
     body {
-      background-color: #042f2e;
+      font-family: Arial, sans-serif;
+      background-color: #002d2d;
       color: white;
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
+      text-align: center;
+      padding: 40px 20px;
     }
-
-    #generatedImage {
-      max-width: 90%;
-      max-height: 400px;
-      margin: 1rem 0;
-      border-radius: 10px;
+    input, button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
     }
-
-    #prompt {
-      padding: 0.5rem;
-      width: 80%;
-      font-size: 1rem;
-    }
-
     .style-btn {
-      background-color: #065a60;
+      background-color: #014040;
       color: white;
-      padding: 0.5rem 1rem;
-      margin: 0.5rem;
       border: none;
-      border-radius: 5px;
+      padding: 10px 20px;
+      margin: 5px;
       cursor: pointer;
     }
-
     .style-btn.selected {
-      background-color: #0b939b;
+      background-color: #009999;
     }
-
-    #generateBtn {
-      margin-top: 1rem;
-      padding: 0.6rem 1.2rem;
-      font-size: 1rem;
-      background-color: #04b4ae;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+    #generatedImage {
+      margin-top: 30px;
+      max-width: 90%;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
   <h1>AI Image Generator</h1>
-  <img id="generatedImage" src="" alt="Generated Image"/>
-  <input type="text" id="prompt" placeholder="Enter a prompt..." />
+  <input type="text" id="prompt" placeholder="Enter prompt..." />
   <div>
     <button class="style-btn selected">Real</button>
     <button class="style-btn">Anime</button>
     <button class="style-btn">AI</button>
   </div>
   <button id="generateBtn">Create</button>
+  <div>
+    <img id="generatedImage" alt="Generated Image" />
+  </div>
 
-  <script>
-    const buttons = document.querySelectorAll(".style-btn");
-    buttons.forEach((btn) => {
-      btn.addEventListener("click", () => {
-        buttons.forEach((b) => b.classList.remove("selected"));
-        btn.classList.add("selected");
-      });
-    });
-
-    document.getElementById("generateBtn").addEventListener("click", async () => {
-      const prompt = document.getElementById("prompt").value;
-      const style = document.querySelector(".style-btn.selected")?.textContent || "Real";
-
-      const imgEl = document.getElementById("generatedImage");
-      imgEl.src = "";
-      imgEl.alt = "Generating...";
-
-      try {
-        const response = await fetch("https://ai-image-site.vercel.app/api/generate", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({ prompt, style }),
-        });
-
-        const prediction = await response.json();
-        const predictionUrl = prediction?.urls?.get;
-
-        if (!predictionUrl) {
-          alert("Failed to start image generation.");
-          return;
-        }
-
-        let image;
-        while (!image) {
-          const res = await fetch(predictionUrl);
-          const data = await res.json();
-
-          if (data.status === "succeeded") {
-            image = data.output[data.output.length - 1];
-          } else if (data.status === "failed") {
-            alert("Image generation failed.");
-            return;
-          } else {
-            await new Promise((resolve) => setTimeout(resolve, 1500));
-          }
-        }
-
-        imgEl.src = image;
-        imgEl.alt = "Generated Image";
-      } catch (err) {
-        console.error(err);
-        alert("Something went wrong.");
-      }
-    });
-  </script>
+  <!-- Updated script path -->
+  <script src="frontend/generate.js"></script>
 </body>
 </html>
