--- a/index.html
+++ b/index.html
@@ -1,40 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AI Image Generator</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      background: #111;
-      color: #eee;
+      background-color: #0d1117;
+      color: #c9d1d9;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
+      padding: 2rem;
     }
-    input, button {
-      padding: 0.5rem;
-      font-size: 1rem;
-      margin: 1rem 0;
-      width: 90%;
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+
+    input {
+      padding: 0.75rem;
+      width: 80%;
       max-width: 400px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
-    .generated-img {
-      margin-top: 2rem;
-      max-width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 0 15px #000;
+
+    button {
+      background-color: #238636;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
     }
+
+    button:hover {
+      background-color: #2ea043;
+    }
+
     #status {
       margin-top: 1rem;
       color: orange;
+    }
+
+    #image-container img {
+      margin-top: 2rem;
+      max-width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 0 10px black;
     }
   </style>
 </head>
 <body>
   <h1>AI Image Generator</h1>
-  <input id="prompt" type="text" placeholder="Enter your prompt here" />
-  <br />
+  <input type="text" id="prompt" placeholder="Enter your prompt..." />
+  <br>
   <button id="generate-btn">Generate Image</button>
   <div id="status"></div>
   <div id="image-container"></div>
