--- a/index.html
+++ b/index.html
@@ -1,68 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI Image Generator</title>
   <style>
     body {
-      background-color: #0d1117;
-      color: #c9d1d9;
       font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-      padding: 2rem;
+      background: #0a192f;
+      color: #f5f5f5;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      height: 100vh;
+      padding: 20px;
+      margin: 0;
     }
 
     h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
+      color: #00e5ff;
+      margin-bottom: 10px;
     }
 
-    input {
-      padding: 0.75rem;
-      width: 80%;
-      max-width: 400px;
+    #imageContainer {
+      flex: 1;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #generatedImage {
+      max-width: 90%;
+      max-height: 80%;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      border: 2px solid #00e5ff;
+    }
+
+    #controls {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: auto;
+    }
+
+    #prompt {
+      width: 90%;
+      padding: 12px;
       font-size: 1rem;
       border: none;
       border-radius: 8px;
-      margin-bottom: 1rem;
+      margin-bottom: 10px;
+      background: #1e2a47;
+      color: #fff;
     }
 
-    button {
-      background-color: #238636;
-      color: white;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      border-radius: 8px;
+    .style-buttons {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 10px;
+    }
+
+    .style-btn {
+      padding: 8px 16px;
+      margin: 0 5px;
+      background: #112240;
+      color: #fff;
+      border: 1px solid #00e5ff;
+      border-radius: 5px;
       cursor: pointer;
     }
 
-    button:hover {
-      background-color: #2ea043;
+    .style-btn.selected {
+      background: #00e5ff;
+      color: #000;
     }
 
-    #status {
-      margin-top: 1rem;
-      color: orange;
+    #generateBtn {
+      padding: 10px 20px;
+      font-size: 1rem;
+      background: #00e5ff;
+      color: #000;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-bottom: 10px;
     }
 
-    #image-container img {
-      margin-top: 2rem;
-      max-width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 0 10px black;
+    #generateBtn:hover {
+      background: #00bcd4;
     }
   </style>
 </head>
 <body>
   <h1>AI Image Generator</h1>
-  <input type="text" id="prompt" placeholder="Enter your prompt..." />
-  <br>
-  <button id="generate-btn">Generate Image</button>
-  <div id="status"></div>
-  <div id="image-container"></div>
 
-  <script src="generate.js" defer></script>
+  <div id="imageContainer">
+    <img id="generatedImage" src="" alt="" />
+  </div>
+
+  <div id="controls">
+    <input type="text" id="prompt" placeholder="Enter your prompt here..." />
+
+    <div class="style-buttons">
+      <button class="style-btn selected">Real</button>
+      <button class="style-btn">Anime</button>
+      <button class="style-btn">3D</button>
+    </div>
+
+    <button id="generateBtn">Generate Image</button>
+  </div>
+
+  <script src="generate.js"></script>
 </body>
 </html>
+
+<!-- redeploy trigger -->
