--- a/index.html
+++ b/index.html
@@ -1,69 +1,111 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI Image Generator</title>
   <style>
     body {
-      background-color: #0a192f;
-      color: #fff;
-      font-family: Arial, sans-serif;
       margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0d1b2a;
+      color: #ffffff;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: flex-end;
       height: 100vh;
     }
-    .container {
-      width: 90%;
-      max-width: 600px;
+
+    header {
+      padding: 1rem;
+      background-color: #1b263b;
       text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #ffffff;
     }
-    #resultImage {
+
+    #image-container {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+      background-color: #1b263b;
+    }
+
+    #image-preview {
       max-width: 100%;
-      max-height: 50vh;
-      margin-bottom: 20px;
+      max-height: 100%;
       border-radius: 12px;
+      box-shadow: 0 0 10px #415a77;
     }
-    input, button {
-      padding: 10px;
-      font-size: 16px;
+
+    #form-container {
+      padding: 1rem;
+      background-color: #1e2e47;
+      display: flex;
+      gap: 0.5rem;
+      justify-content: center;
+    }
+
+    input[type="text"] {
+      flex: 1;
+      padding: 0.8rem;
       border-radius: 8px;
       border: none;
+      outline: none;
+      font-size: 1rem;
     }
-    input {
-      width: 70%;
-    }
+
     button {
-      background-color: #1e90ff;
+      padding: 0.8rem 1.2rem;
+      background-color: #415a77;
+      border: none;
+      border-radius: 8px;
       color: white;
-      margin-left: 10px;
+      font-size: 1rem;
       cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    button:hover {
+      background-color: #748cab;
+    }
+
+    @media screen and (max-width: 600px) {
+      #form-container {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img id="resultImage" src="" alt="Generated image will appear here" />
-    <input type="text" id="promptInput" placeholder="Describe your image..." />
+  <header>AI Image Generator</header>
+
+  <div id="image-container">
+    <img id="image-preview" src="" alt="Generated image will appear here" />
+  </div>
+
+  <div id="form-container">
+    <input type="text" id="prompt" placeholder="Enter your prompt..." />
     <button onclick="generateImage()">Generate</button>
   </div>
+
   <script>
     async function generateImage() {
-      const prompt = document.getElementById("promptInput").value;
-      const response = await fetch("/api/generate", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ prompt })
+      const prompt = document.getElementById('prompt').value;
+      const response = await fetch('/api/generate', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ prompt }),
       });
+
       const data = await response.json();
-      if (data.imageUrl) {
-        document.getElementById("resultImage").src = data.imageUrl;
+
+      if (response.ok) {
+        document.getElementById('image-preview').src = data.imageUrl;
       } else {
-        alert("Something went wrong!");
+        alert('Something went wrong: ' + (data.error || 'Unknown error'));
       }
     }
   </script>
